WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231811
REGRESSION(
r283437
) a number of media tests fail/timeout on the test bots
https://bugs.webkit.org/show_bug.cgi?id=231811
Summary
REGRESSION(r283437) a number of media tests fail/timeout on the test bots
Arcady Goldmints-Orlov
Reported
2021-10-15 09:45:02 PDT
Starting in
r283437
, a number of media tests started failing or timing out. I have not been able to reproduce these failures locally, however they seem to happen consistently on the test bots: Regressions: Unexpected text-only failures media/audio-background-playback-playlist.html [ Failure ] media/media-session/actionHandlerInternalMappings.html [ Failure ] media/media-session/default-actionHandlers.html [ Failure ] media/video-background-playback.html [ Failure ] media/video-concurrent-playback.html [ Failure ] media/video-interruption-with-resume-not-allowing-play.html [ Failure ] media/video-multiple-concurrent-playback.html [ Failure ] media/webaudio-background-playback.html [ Failure ] webrtc/concurrentVideoPlayback2.html [ Failure ] Regressions: Unexpected timeouts media/media-session/callActionHandler.html [ Timeout ] media/media-session/play-after-seek.html [ Timeout ] media/remote-control-command-is-user-gesture.html [ Timeout ] media/remote-control-command-scrubbing.html [ Timeout ] media/remote-control-command-seek.html [ Timeout ] media/video-inactive-playback.html [ Timeout ] media/video-interruption-with-resume-allowing-play.html [ Timeout ] media/video-isplayingtoautomotiveheadunit.html [ Timeout ] media/video-system-sleep.html [ Timeout ] webaudio/audiocontext-state-interrupted.html [ Timeout ] webaudio/suspend-context-while-interrupted.html [ Timeout ]
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-10-15 09:52:43 PDT
That needs to be debugged on the bots i'm afraid.
Philippe Normand
Comment 2
2021-10-15 10:50:15 PDT
Unable to get session D-Bus address: Error spawning command line “dbus-launch --autolaunch=9f2b401abdc6c6c1d15ef4a44ac5ea33 --binary-syntax --close-stderr”: Child process exited with code 1 Looks like some dbus issue... Is dbus running on the bot?
Radar WebKit Bug Importer
Comment 3
2021-10-22 09:45:19 PDT
<
rdar://problem/84552871
>
Arcady Goldmints-Orlov
Comment 4
2021-12-01 17:07:56 PST
Also on the list of failures: fast/mediastream/MediaStream-video-element-enter-background.html
Philippe Normand
Comment 5
2022-04-30 06:57:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/446
EWS
Comment 6
2022-04-30 09:51:04 PDT
Committed
r293648
(
250152@main
): <
https://commits.webkit.org/250152@main
> Reviewed commits have been landed. Closing PR #446 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug