REGRESSION(r283437) a number of media tests fail/timeout on the test bots https://bugs.webkit.org/show_bug.cgi?id=231811 <rdar://problem/84552871>

Patch by Philippe Normand <pnormand@igalia.com> on 2022-04-30
Reviewed by Michael Catanzaro.

Disable DBus MPRIS notifications when running the tests, these leak to the host when running
on desktop and trigger timeouts on under-powered bots.

* platform/audio/glib/MediaSessionGLib.cpp:
(WebCore::MediaSessionGLib::create):
(WebCore::MediaSessionGLib::MediaSessionGLib):
(WebCore::MediaSessionGLib::emitPositionChanged):
(WebCore::MediaSessionGLib::updateNowPlaying):
(WebCore::MediaSessionGLib::playbackStatusChanged):
* platform/audio/glib/MediaSessionManagerGLib.h:
(WebCore::MediaSessionManagerGLib::setDBusNotificationsEnabled):
(WebCore::MediaSessionManagerGLib::areDBusNotificationsEnabled const):
* testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):

LayoutTests:

* platform/glib/TestExpectations: Unflag tests now passing.

Canonical link: https://commits.webkit.org/250152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293648 268f45cc-cd09-0410-ab3c-d52691b4dbfc

(cherry picked from commit 9d35a3d9c026f183cfc42bc1ed9b86e426ba766e)