Source/WebCore/platform/audio/glib/MediaSessionManagerGLib.h
@@ -53,6 +53,9 @@ public:
     const GRefPtr<GDBusNodeInfo>& mprisInterface() const { return m_mprisInterface; }
     PlatformMediaSession* nowPlayingEligibleSession();
 
+    void setDBusNotificationsEnabled(bool dbusNotificationsEnabled) { m_dbusNotificationsEnabled = dbusNotificationsEnabled; }
+    bool areDBusNotificationsEnabled() const { return m_dbusNotificationsEnabled; }
+
 protected:
     void scheduleSessionStatusUpdate() final;
     void updateNowPlayingInfo();
@@ -99,6 +102,8 @@ private:
 
     const std::unique_ptr<NowPlayingManager> m_nowPlayingManager;
     HashMap<MediaSessionIdentifier, std::unique_ptr<MediaSessionGLib>> m_sessions;
+
+    bool m_dbusNotificationsEnabled { true };
 };
 
 } // namespace WebCore
